openshift/base/nextjs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs
spec:
  selector:
    app.kubernetes.io/component: nextjs
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
