openshift/base/nextjs/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nextjs
spec:
  to:
    kind: Service
    name: nextjs
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
